--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -40,7 +40,7 @@ triggers.Microlith57Misc/HoldableBouyancyRegion.attributes.description.maxForce=
 triggers.Microlith57Misc/HoldableBouyancyRegion.attributes.description.damping=Coefficient controlling how much motion is slowed in the region; acts like viscosity.
 triggers.Microlith57Misc/HoldableBouyancyRegion.attributes.description.flag=If present, apply bouyancy only when the flag is set.
 
-triggers.Microlith57Misc/SetFacingTrigger.placements.name.setFacingTrigger=Set Facing Trigger
+triggers.Microlith57Misc/SetFacingTrigger.placements.name.setFacingTrigger=Set Player Facing Trigger
 triggers.Microlith57Misc/SetFacingTrigger.attributes.description.direction=Direction to make the player face.
 triggers.Microlith57Misc/SetFacingTrigger.attributes.description.flag=If present, only make the player face that direction if the flag is set.
 triggers.Microlith57Misc/SetFacingTrigger.attributes.description.invertIfUnset=If the flag is unset, make the player face the other way.
