--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -109,6 +109,26 @@ triggers.Microlith57Misc/HoldableBouyancyRegion_Expression.attributes.descriptio
 triggers.Microlith57Misc/HoldableBouyancyRegion_Expression.attributes.description.damping=Coefficient controlling how much motion is slowed in the region; acts like viscosity.
 triggers.Microlith57Misc/HoldableBouyancyRegion_Expression.attributes.description.flag=If present, apply bouyancy only when the flag is set.
 
+# Position Tracker Region
+triggers.Microlith57Misc/PositionTrackerRegion.placements.name.positionTrackerRegion=Position Tracker Region (Flag)
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.description.retargetIfFlag=If present, only allow changing targets when the flag is set.
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.name.invertRetargetIfFlag=Invert Retarget Flag
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.description.target=What type of entity to track.\n\nPlayer: Just the player.\nActor: Players, holdables, and similar entities.\nSolid: Solid entities of any kind.
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.description.detection=Whether an entity must be entirely within the region; just intersecting the region; or anywhere.
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.description.stickiness=What to do once an entity is targetted.\n\nFree: Can retarget at any time; stop tracking when entity is no longer detected.\nTransient: Stop tracking when entity is no longer detected, and then perhaps retarget.\nUntilNewMatch: Keep tracking even after entity is no longer detected, but after this retarget if possible.\nUntilDeath: Only retarget once entity is removed.\nLifelink: Keep entity targeted until it is removed, at which point also remove the region.\nSoulbond: Ensure entity exists when region is created, and remove region when entity is removed.
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.description.tracking=What position to track; or "Size" for width/height.
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.description.sliderPrefix=Set sliders whose names start with this and end in X and Y.
+triggers.Microlith57Misc/PositionTrackerRegion.attributes.description.targettingFlag=If present, set flag with this name when a target is found.
+
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.placements.name.positionTrackerRegion=Position Tracker Region (Flag)
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.attributes.description.retargetIfExpression=If present, only allow changing targets when the expression is truthy.
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.attributes.description.target=What type of entity to track.\n\nPlayer: Just the player.\nActor: Players, holdables, and similar entities.\nSolid: Solid entities of any kind.
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.attributes.description.detection=Whether an entity must be entirely within the region; just intersecting the region; or anywhere.
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.attributes.description.stickiness=What to do once an entity is targetted.\n\nFree: Can retarget at any time; stop tracking when entity is no longer detected.\nTransient: Stop tracking when entity is no longer detected, and then perhaps retarget.\nUntilNewMatch: Keep tracking even after entity is no longer detected, but after this retarget if possible.\nUntilDeath: Only retarget once entity is removed.\nLifelink: Keep entity targeted until it is removed, at which point also remove the region.\nSoulbond: Ensure entity exists when region is created, and remove region when entity is removed.
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.attributes.description.tracking=What position to track; or "Size" for width/height.
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.attributes.description.sliderPrefix=Set sliders whose names start with this and end in X and Y.
+triggers.Microlith57Misc/PositionTrackerRegion_Expression.attributes.description.targettingFlag=If present, set flag with this name when a target is found.
+
 # Set Player Facing Trigger
 triggers.Microlith57Misc/SetFacingTrigger.placements.name.setFacingTrigger=Set Player Facing Trigger (Flag)
 triggers.Microlith57Misc/SetFacingTrigger.attributes.description.direction=Direction to make the player face.
